<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph_characters"
    app:startDestination="@id/characterListFragment">

    <fragment
        android:id="@+id/characterListFragment"
        android:name="com.coppel.alfonsosotelo.coppelmarvel.ui.characterlist.CharacterListFragment"
        android:label="@string/characters" >
        <action
            android:id="@+id/actionFromCharListToDetails"
            app:destination="@id/characterDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/actionFromCharListToEdit"
            app:destination="@id/characterEditFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/characterDetailsFragment"
        android:name="com.coppel.alfonsosotelo.coppelmarvel.ui.character.details.CharacterDetailsFragment"
        android:label="@string/character_details">
        <argument
            android:name="entityId"
            app:argType="integer" />
        <action
            android:id="@+id/actionFromCharDetailsToEdit"
            app:destination="@id/characterEditFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/characterEditFragment"
        android:name="com.coppel.alfonsosotelo.coppelmarvel.ui.character.edit.CharacterEditFragment"
        android:label="@string/character_edit">
        <argument
            android:name="entityId"
            app:argType="integer" />
        <action
            android:id="@+id/actionFromCharEditToDetails"
            app:destination="@id/characterDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>